@@ -78,6 +78,9 @@
                         <a id="hardlimit-archive" onclick="toggle_account(this)">Stream Archive</a>
                     </li>
                     <li class="entry">
+                        <a id="itchio" onclick="toggle_account(this)">itch.io</a>
+                    </li>
+                    <li class="entry">
                         <a id="kofi" onclick="toggle_account(this)">Ko-Fi</a>
                     </li>
                     <li class="entry">
