@@ -25,57 +25,59 @@
             <!-- Header will be inserted here -->
         </div>
         <div id="body-container" class="outer-container">
-            <div class="text-row">
-                <div class="text-column">
-                    <a href="#overview"><h2 id="overview">Overview</h2></a>
-                    <p>Writing: my greatest passion in life, and hopefully one day my career. I first became interested in writing during my first year of secondary school, at age 11. Already a lover of reading, I began writing blurbs for non-existent books instead of paying attention to my classes. After some time, this developed into wanting to make these books existent, and after I began properly writing for the first time in fourth year, with some advice and encouragement from my truly wonderful English teacher, I threw myself fully into the hobby, with the full intention of it becoming a career.
+            <main class="text-row inner-container">
+                <div class="text-row">
+                    <div class="text-column">
+                        <a href="#overview"><h2 id="overview">Overview</h2></a>
+                        <p>Writing: my greatest passion in life, and hopefully one day my career. I first became interested in writing during my first year of secondary school, at age 11. Already a lover of reading, I began writing blurbs for non-existent books instead of paying attention to my classes. After some time, this developed into wanting to make these books existent, and after I began properly writing for the first time in fourth year, with some advice and encouragement from my truly wonderful English teacher, I threw myself fully into the hobby, with the full intention of it becoming a career.
 
-                    Below, you'll find a number of links and introductions to aspects of my writing; projects I'm undertaking, plans I have, maybe a couple of excerpts. Who knows? I hope you enjoy what you find.
-                    </p>
+                        Below, you'll find a number of links and introductions to aspects of my writing; projects I'm undertaking, plans I have, maybe a couple of excerpts. Who knows? I hope you enjoy what you find.
+                        </p>
+                    </div>
                 </div>
-            </div>
-            <div class="text-row">
-                <div class="text-column left-column">
-                    <a class="hlink" href="#prose"><h2 id="prose">Prose</h2></a>
-                    <p>Prose writing, especially fantasy and science fiction, is my absolute favourite thing to do. In fact, I've done far more prose than poetry, but none of my work in this department is actually published. Though I've finished drafts for both a novel and a novella, written more first chapters than I care to admit, and even locally host a MediaWiki installation to organise my information, I've never got any prose to the point where I'm happy to publish it. I hope that will change as soon as possible.
+                <div class="text-row">
+                    <div class="text-column left-column">
+                        <a class="hlink" href="#prose"><h2 id="prose">Prose</h2></a>
+                        <p>Prose writing, especially fantasy and science fiction, is my absolute favourite thing to do. In fact, I've done far more prose than poetry, but none of my work in this department is actually published. Though I've finished drafts for both a novel and a novella, written more first chapters than I care to admit, and even locally host a MediaWiki installation to organise my information, I've never got any prose to the point where I'm happy to publish it. I hope that will change as soon as possible.
 
-                    With that in mind, I'm currently working on a few projects. <i>Infinity's Omega</i> is the novella I mentioned, a piece of science fiction set towards the very end of the universe. I also started a low fantasy clockpunk fantasy novel called <i>The Iron City</i>, which I began writing for NaNoWriMo 2021 (which I completed!).
+                        With that in mind, I'm currently working on a few projects. <i>Infinity's Omega</i> is the novella I mentioned, a piece of science fiction set towards the very end of the universe. I also started a low fantasy clockpunk fantasy novel called <i>The Iron City</i>, which I began writing for NaNoWriMo 2021 (which I completed!).
 
-                    I'm also hoping to start writing online at some point in the future, so watch these spaces:
-                    </p>
-                    <ul>
-                        <li><a href="https://belletristica.com/en/users/14865-murdo-maclachlan#profile">Belletristica</a></li>
-                        <li><a href="https://wordsmith.social/murdomaclachlan/">Wordsmith</a></li>
-                    </ul>
+                        I'm also hoping to start writing online at some point in the future, so watch these spaces:
+                        </p>
+                        <ul>
+                            <li><a href="https://belletristica.com/en/users/14865-murdo-maclachlan#profile">Belletristica</a></li>
+                            <li><a href="https://wordsmith.social/murdomaclachlan/">Wordsmith</a></li>
+                        </ul>
+                    </div>
+                    <div class="text-column">
+                        <a class="hlink" href="writing/poetry"><h2 id="poetry">Poetry</h2></a>
+                        <p>Poetry, despite being secondary in my interests, is actaully both the first writing I ever did and the only writing where I have published work.
+
+                        My early poems are, frankly, rubbish, but since joining <a href="https://allpoetry.com/Murdo_Maclachlan">AllPoetry.com</a>, I gained a new love and passion for the art and have since improved a lot. Here's an excerpt from one of my favourites:
+                        </p>
+                        <blockquote cite="https://allpoetry.com/poem/16101383-Ripples-on-the-Mirror-by-Murdo-Maclachlan"><span class="quote-title">Ripples on the Mirror, Excerpt</span>
+
+                            I sit and lean my hands on the soft shores;
+                            dark granules of earth bleed between my fingers
+                            while the breeze pulls calmly at my hair
+                            and a flash of deep gold glances off this blue mirror.
+
+                            I listen to the hushed song of the waves,
+                            tilt my head to the silhouetted leaves like moths
+                            that flutter and dance in the wind above;
+                            the scent of dew, leaves and soil hues the air.
+
+                            <a href="https://allpoetry.com/poem/16101383-Ripples-on-the-Mirror-by-Murdo-Maclachlan">More...</a>
+                        </blockquote>
+                        <p>I mentioned that poetry is the only work of mine that's published ― this is true, and it isn't exclusive to the web! In February 2020, I officially became a published poet, with my haiku <a href="https://allpoetry.com/poem/14842171-Bitter-Cold-Teeth-by-Murdo-Maclachlan">Bitter Cold Teeth</a> making it into one of AllPoetry's anthologies, <a href="https://www.amazon.co.uk/Dreaming-Ink-Various/dp/B084Z3WWFH">Dreaming of Ink</a>.
+
+                            Another poem to note on my account is <a href="https://allpoetry.com/poem/15687070-Sea-of-Night-by-Murdo-Maclachlan">Sea of Night</a>, which, thanks to a very kind Redditor, is currently on an SSD that <a href="https://www.reddit.com/r/space/comments/l52iym/you_can_send_something_to_the_moon_for_free_im/">will travel to the moon</a>.
+
+                            Additionally, I posted a collection of poetry to <a href="https://belletristica.com/en/books/44015-hallowe-en-2018-rewritten">Belletristica</a>, and to <a href="https://murdomaclachlan.itch.io/halloween-2018-rewritten">itch.io</a>; these poems were written originally for Hallowe'en 2018, and recently I re-wrote them.
+                        </p>
+                    </div>
                 </div>
-                <div class="text-column">
-                    <a class="hlink" href="writing/poetry"><h2 id="poetry">Poetry</h2></a>
-                    <p>Poetry, despite being secondary in my interests, is actaully both the first writing I ever did and the only writing where I have published work.
-
-                    My early poems are, frankly, rubbish, but since joining <a href="https://allpoetry.com/Murdo_Maclachlan">AllPoetry.com</a>, I gained a new love and passion for the art and have since improved a lot. Here's an excerpt from one of my favourites:
-                    </p>
-                    <blockquote cite="https://allpoetry.com/poem/16101383-Ripples-on-the-Mirror-by-Murdo-Maclachlan"><span class="quote-title">Ripples on the Mirror, Excerpt</span>
-
-                        I sit and lean my hands on the soft shores;
-                        dark granules of earth bleed between my fingers
-                        while the breeze pulls calmly at my hair
-                        and a flash of deep gold glances off this blue mirror.
-
-                        I listen to the hushed song of the waves,
-                        tilt my head to the silhouetted leaves like moths
-                        that flutter and dance in the wind above;
-                        the scent of dew, leaves and soil hues the air.
-
-                        <a href="https://allpoetry.com/poem/16101383-Ripples-on-the-Mirror-by-Murdo-Maclachlan">More...</a>
-                    </blockquote>
-                    <p>I mentioned that poetry is the only work of mine that's published ― this is true, and it isn't exclusive to the web! In February 2020, I officially became a published poet, with my haiku <a href="https://allpoetry.com/poem/14842171-Bitter-Cold-Teeth-by-Murdo-Maclachlan">Bitter Cold Teeth</a> making it into one of AllPoetry's anthologies, <a href="https://www.amazon.co.uk/Dreaming-Ink-Various/dp/B084Z3WWFH">Dreaming of Ink</a>.
-
-                        Another poem to note on my account is <a href="https://allpoetry.com/poem/15687070-Sea-of-Night-by-Murdo-Maclachlan">Sea of Night</a>, which, thanks to a very kind Redditor, is currently on an SSD that <a href="https://www.reddit.com/r/space/comments/l52iym/you_can_send_something_to_the_moon_for_free_im/">will travel to the moon</a>.
-
-                        Additionally, I may post some poetry collections to <a href="https://belletristica.com/en/users/14865-murdo-maclachlan#profile">Belletristica</a>.
-                    </p>
-                </div>
-            </div>
+            </main>
         </div>
         <div id="footer-container" class="outer-container">
             <!-- Footer will be inserted here -->
