@@ -1,5 +1,7 @@
 UNRELEASED:
 
+- Added mentions of "Hallowe'en 2018, Rewritten".
+
 2022-04-28:
 
 - Added a cookie acceptance/declination banner.
